notebook updated to pull data table description and field data into reports

--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
+   "id": "a6ab8b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install pyyaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -69,12 +79,13 @@
     "import datetime\n",
     "from IPython.display import display, Markdown\n",
     "import re\n",
-    "from collections import defaultdict"
+    "from collections import defaultdict\n",
+    "import yaml"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -118,7 +129,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
+   "id": "3725550f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Loaded schema documentation for 1 tables.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# cell 3: YAML configuration\n",
+    "# This cell contains the YAML configuration for the report.\n",
+    "schema_docs = {}\n",
+    "# Add this to your config\n",
+    "schema_yaml_path = '/Volumes/Public/Container_Settings/sqlpage/schema'\n",
+    "\n",
+    "if os.path.isdir(schema_yaml_path):\n",
+    "    for filename in os.listdir(schema_yaml_path):\n",
+    "        # print(f\"Loading schema documentation from {filename}...\")\n",
+    "        if filename.endswith('.yaml'):\n",
+    "            with open(os.path.join(schema_yaml_path, filename), 'r') as f:\n",
+    "                doc = yaml.safe_load(f)\n",
+    "                if 'table_name' in doc:\n",
+    "                    table_name = doc['table_name']\n",
+    "                    schema_docs[table_name] = {\n",
+    "                        'description': doc.get('description', '')}\n",
+    "                    schema_docs[table_name]['columns'] = {\n",
+    "                        col['name']: col.get('description', '')\n",
+    "                        for col in doc.get('columns', []) if isinstance(col, dict) and 'name' in col\n",
+    "                    }\n",
+    "    print(f\"✅ Loaded schema documentation for {len(schema_docs)} tables.\")\n",
+    "else:\n",
+    "    print(\"⚠️ Schema YAML directory not found. Descriptions will be missing.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -132,7 +183,7 @@
     }
    ],
    "source": [
-    "# Cell 3: Fetch Table Names and View Names\n",
+    "# Cell 4: Fetch Table Names and View Names\n",
     "\n",
     "table_names = []\n",
     "view_names = []  # New list to hold view names\n",
@@ -171,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -184,7 +235,7 @@
     }
    ],
    "source": [
-    "## Cell 4: Initialize Report and Connect to Database\n",
+    "## Cell 5: Initialize Report and Connect to Database\n",
     "# This cell prepares for report generation and opens the database connection.\n",
     "\n",
     "markdown_parts = []\n",
@@ -203,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -216,7 +267,7 @@
     }
    ],
    "source": [
-    "## Cell 5: Generate Table of Contents\n",
+    "## Cell 6: Generate Table of Contents\n",
     "# This cell builds the markdown table of contents for the report.\n",
     "\n",
     "if conn:  # Only proceed if the connection was successful\n",
@@ -241,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -254,7 +305,7 @@
     }
    ],
    "source": [
-    "## Cell 6: Generate Database Properties Summary\n",
+    "## Cell 7: Generate Database Properties Summary\n",
     "# This cell adds a high-level summary of the database file's properties.\n",
     "\n",
     "if conn:\n",
@@ -293,41 +344,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "id": "e48b1acd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "✅ Modular helper functions are defined.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Cell 7: Define Helper Functions for Schema Details\n",
+    "# Cell 8: Define Helper Functions for Schema Details\n",
     "# This cell defines a set of modular functions to generate different parts of the schema report.\n",
     "\n",
     "# --- Individual Formatting Functions ---\n",
     "\n",
     "\n",
-    "def format_column_details(object_name, db_connection):\n",
-    "    \"\"\"Formats the 'Columns' table for a given object.\"\"\"\n",
+    "def format_column_details(object_name, db_connection, schema_docs):\n",
+    "    \"\"\"Formats the 'Columns' table for a given object, including descriptions from YAML.\"\"\"\n",
     "    parts = [\"**Columns**\\n\\n\"]\n",
-    "    parts.append(\"| Name | Type | Not Null | Default | Primary Key |\\n\")\n",
-    "    parts.append(\"| :--- | :--- | :--- | :--- | :--- |\\n\")\n",
+    "\n",
+    "    # 1. ADDED \"Description\" to the markdown table header\n",
+    "    parts.append(\n",
+    "        \"| Name | Type | Not Null | Default | Primary Key | Description |\\n\")\n",
+    "    parts.append(\"| :--- | :--- | :--- | :--- | :--- | :--- |\\n\")\n",
+    "\n",
     "    cursor = db_connection.cursor()\n",
     "    cursor.execute(f\"PRAGMA table_info('{object_name}');\")\n",
+    "\n",
+    "    # 2. GET the specific column documentation for this table, with a fallback\n",
+    "    table_column_docs = schema_docs.get(object_name, {}).get('columns', {})\n",
+    "\n",
     "    for col in cursor.fetchall():\n",
-    "        name = f\"`{col[1]}`\"\n",
+    "        # 3. FIX: Correctly get the column name from the database result\n",
+    "        col_name = col[1]\n",
+    "        name_md = f\"`{col_name}`\"\n",
+    "\n",
+    "        # Get the description for this specific column from the loaded docs\n",
+    "        col_desc = table_column_docs.get(col_name, \"\")\n",
+    "\n",
     "        col_type = col[2]\n",
     "        not_null = \"✅\" if col[3] == 1 else \"\"\n",
     "        default_val = f\"`{col[4]}`\" if col[4] is not None else \"\"\n",
     "        is_pk = \"✅\" if col[5] == 1 else \"\"\n",
+    "\n",
+    "        # 4. ADD the col_desc variable to the final table row\n",
     "        parts.append(\n",
-    "            f\"| {name} | {col_type} | {not_null} | {default_val} | {is_pk} |\\n\"\n",
+    "            f\"| {name_md} | {col_type} | {not_null} | {default_val} | {is_pk} | {col_desc} |\\n\"\n",
     "        )\n",
+    "\n",
     "    parts.append(\"\\n\")\n",
     "    return \"\".join(parts)\n",
     "\n",
@@ -427,8 +487,7 @@
     "\n",
     "# --- Main Orchestrator Function (with Error Handling) ---\n",
     "\n",
-    "\n",
-    "def generate_object_details(object_name, object_type_title, db_connection):\n",
+    "def generate_object_details(object_name, object_type_title, db_connection, schema_docs):\n",
     "    \"\"\"\n",
     "    Fetches and formats all details for a database object by calling specialized functions.\n",
     "    Catches errors for invalid or temporary objects.\n",
@@ -436,11 +495,20 @@
     "    try:\n",
     "        details_parts = [f\"\\n---\\n### {object_name}\\n\\n\"]\n",
     "\n",
-    "        # Call each formatting function in order\n",
-    "        details_parts.append(format_column_details(object_name, db_connection))\n",
+    "        # --- FIX: This is the key change. ---\n",
+    "        # We safely get the description. If the table or the description key\n",
+    "        # doesn't exist, `table_desc` will be `None`, which is safe to check.\n",
+    "        table_desc = schema_docs.get(object_name, {}).get('description')\n",
+    "        if table_desc:\n",
+    "            details_parts.append(f\"_{table_desc}_\\n\\n\")\n",
+    "\n",
+    "        # Pass schema_docs down to the next function\n",
+    "        details_parts.append(format_column_details(\n",
+    "            object_name, db_connection, schema_docs))\n",
     "\n",
     "        if object_type_title == \"Table\":\n",
-    "            details_parts.append(format_foreign_keys(object_name, db_connection))\n",
+    "            details_parts.append(format_foreign_keys(\n",
+    "                object_name, db_connection))\n",
     "            details_parts.append(format_indexes(object_name, db_connection))\n",
     "            details_parts.append(format_triggers(object_name, db_connection))\n",
     "\n",
@@ -454,21 +522,19 @@
     "        return \"\".join(details_parts)\n",
     "    except sqlite3.OperationalError as e:\n",
     "        # Gracefully handle errors for specific objects without crashing\n",
-    "        print(f\"⚠️  Skipping object '{object_name}' due to a processing error: {e}\")\n",
+    "        print(\n",
+    "            f\"⚠️  Skipping object '{object_name}' due to a processing error: {e}\")\n",
     "        error_report = [\n",
     "            f\"\\n---\\n### {object_name}\\n\\n\",\n",
     "            f\"_Could not generate documentation for this object. It may be temporary or invalid._\\n\\n\",\n",
     "            f\"**Error:** `{e}`\\n\",\n",
     "        ]\n",
-    "        return \"\".join(error_report)\n",
-    "\n",
-    "\n",
-    "print(\"✅ Modular helper functions are defined.\")"
+    "        return \"\".join(error_report)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -481,7 +547,7 @@
     }
    ],
    "source": [
-    "## Cell 8: Generate Report Body for Tables and Views\n",
+    "# Cell 9: Generate Report Body for Tables and Views\n",
     "# This cell iterates through tables and views, calling the helper function to build the report content.\n",
     "\n",
     "if conn:\n",
@@ -489,20 +555,25 @@
     "    if table_names:\n",
     "        markdown_parts.append(\"\\n## Table Schemas\\n\")\n",
     "        for table_name in sorted(table_names):\n",
-    "            markdown_parts.append(generate_object_details(table_name, \"Table\", conn))\n",
+    "            # FIX: Pass schema_docs to the function call\n",
+    "            markdown_parts.append(generate_object_details(\n",
+    "                table_name, \"Table\", conn, schema_docs))\n",
     "\n",
     "    # Generate Details for Views\n",
     "    if view_names:\n",
     "        markdown_parts.append(\"\\n## View Schemas\\n\")\n",
     "        for view_name in sorted(view_names):\n",
-    "            markdown_parts.append(generate_object_details(view_name, \"View\", conn))\n",
+    "            # FIX: Pass schema_docs here as well\n",
+    "            # Note: You may decide not to document views with YAML, but passing the variable is harmless.\n",
+    "            markdown_parts.append(generate_object_details(\n",
+    "                view_name, \"View\", conn, schema_docs))\n",
     "\n",
     "    print(\"✅ Report body generated for all tables and views.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -515,7 +586,7 @@
     }
    ],
    "source": [
-    "## Cell 9: Finalize Report and Close Connection\n",
+    "## Cell 10: Finalize Report and Close Connection\n",
     "# This cell assembles the final report string and closes the database connection.\n",
     "\n",
     "schema_report_body = \"\"\n",
@@ -529,12 +600,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Cell 10: Helper Function for Saving\n",
+    "## Cell 11: Helper Function for Saving\n",
     "# This cell defines a reusable function to handle saving files to prevent code duplication.\n",
     "\n",
     "\n",
@@ -555,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 47,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -564,15 +635,15 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Database Schema Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Database Schema Report.md'\n",
       "\\nSaving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Database Schema Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Database Schema Report.md'\n"
      ]
     }
    ],
    "source": [
-    "## Cell 11: Assemble and Save Schema Report\n",
+    "## Cell 12: Assemble and Save Schema Report\n",
     "# This cell assembles the final schema document with Obsidian frontmatter and saves it.\n",
     "\n",
     "if schema_report_body:\n",
@@ -639,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -652,7 +723,7 @@
     }
    ],
    "source": [
-    "# Cell 12: Generate Folder Tree\n",
+    "# Cell 13: Generate Folder Tree\n",
     "sqlpage_tree_string = \"\"\n",
     "\n",
     "\n",
@@ -688,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 49,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -697,16 +768,16 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Folder Tree Report.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Folder Tree Report.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-30/2025-06-30 - SQLPage - Workout - Folder Tree Report.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-02/2025-07-02 - SQLPage - Workout - Folder Tree Report.md'\n"
      ]
     }
    ],
    "source": [
-    "## Cell 13: Assemble and Save Folder Tree Report\n",
+    "## Cell 14: Assemble and Save Folder Tree Report\n",
     "# This final cell assembles the folder tree report with frontmatter and saves it.\n",
     "\n",
     "if sqlpage_tree_string:\n",
@@ -766,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 50,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -774,12 +845,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found and parsed documentation comments from 29 SQL files.\n"
+      "✅ Found and parsed documentation comments from 30 SQL files.\n"
      ]
     }
    ],
    "source": [
-    "## Cell 14: Parse Comments from SQL Files\n",
+    "## Cell 15: Parse Comments from SQL Files\n",
     "\n",
     "sql_docs_data = []\n",
     "\n",
@@ -833,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 51,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -846,7 +917,7 @@
     }
    ],
    "source": [
-    "## Cell 15: Generate SQL Documentation Body\n",
+    "## Cell 16: Generate SQL Documentation Body\n",
     "# This cell takes the parsed data from the previous cell and formats it into a readable markdown document body.\n",
     "\n",
     "sql_docs_body = \"\"\n",
@@ -907,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 52,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -916,16 +987,16 @@
      "output_type": "stream",
      "text": [
       "✅ Report successfully saved to:\n",
-      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-06-30/2025-06-30 - SQLPage - Workout - SQL Comment Documentation.md'\n",
+      "'/Volumes/Public/Container_Settings/sqlpage/reports/2025-07-02/2025-07-02 - SQLPage - Workout - SQL Comment Documentation.md'\n",
       "\n",
       "Saving copy to Obsidian folder...\n",
       "✅ Report successfully saved to:\n",
-      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-06-30/2025-06-30 - SQLPage - Workout - SQL Comment Documentation.md'\n"
+      "'/Users/david/Documents/remote/04 - Coding Project Docs/SQLPage - Workout Logger/reports/2025-07-02/2025-07-02 - SQLPage - Workout - SQL Comment Documentation.md'\n"
      ]
     }
    ],
    "source": [
-    "## Cell 16: Assemble and Save SQL Documentation Report\n",
+    "## Cell 17: Assemble and Save SQL Documentation Report\n",
     "# This final cell assembles the full document with frontmatter and saves your new SQL Documentation report.\n",
     "\n",
     "if sql_docs_body:\n",
