massive migration to a star schema

--- a/migrations/migrations_runner_notebook.ipynb
+++ b/migrations/migrations_runner_notebook.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "7184c1b8",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "27b44b62",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "e2a06181",
    "metadata": {},
    "outputs": [],
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "39c3f6f0",
    "metadata": {},
    "outputs": [
@@ -232,11 +232,11 @@
      "output_type": "stream",
      "text": [
       "Starting migration process...\n",
-      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-06-30_195301.db...\n",
+      "Backing up database to /Volumes/Public/Container_Settings/sqlpage/backups/workouts-backup-2025-07-02_194941.db...\n",
       "Backup successful.\n",
       "\n",
-      "Applying migration: 003_add_timezone_to_users.sql...\n",
-      "Successfully applied 003_add_timezone_to_users.sql.\n",
+      "Applying migration: 010_restore_from_backup.sql...\n",
+      "Successfully applied 010_restore_from_backup.sql.\n",
       "\n",
       "Migration process finished.\n"
      ]
