--- a/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
+++ b/notebooks/SQLPage_Workout_Documentation_Generator.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "id": "a6ab8b50",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "id": "ba65b493",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "id": "8236c4e2",
    "metadata": {},
    "outputs": [],
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "id": "3725550f",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "id": "65fc64d3",
    "metadata": {},
    "outputs": [
@@ -177,8 +177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Found 12 tables: ExerciseLibrary, ProgressionModelSteps, ProgressionModels, UserExerciseProgression, WorkoutSetLog, sessions, users, TemplateExerciseList, WorkoutLog, WorkoutTemplates, _migrations, UserExerciseProgressionHistory\n",
-      "✅ Found 5 views: FullWorkoutHistory, UserExerciseProgressionTargets, WorkoutTemplateDetails, V_ProgressionHistorySummary, V_Exercise1RM_Chart\n"
+      "✅ Found 8 tables: sessions, _migrations, DimUser, DimDate, DimExercise, DimUserExercisePreferences, DimExercisePlan, FactWorkoutHistory\n"
      ]
     }
    ],
@@ -222,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 67,
    "id": "8ce7fbb9",
    "metadata": {},
    "outputs": [
@@ -254,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 68,
    "id": "d1900b8c",
    "metadata": {},
    "outputs": [
@@ -292,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 69,
    "id": "a69dfd35",
    "metadata": {},
    "outputs": [
@@ -344,10 +343,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "id": "e48b1acd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Modular helper functions are defined.\n"
+     ]
+    }
+   ],
    "source": [
     "# Cell 8: Define Helper Functions for Schema Details\n",
     "# This cell defines a set of modular functions to generate different parts of the schema report.\n",
@@ -371,7 +378,6 @@
     "    table_column_docs = schema_docs.get(object_name, {}).get('columns', {})\n",
     "\n",
     "    for col in cursor.fetchall():\n",
-    "        # 3. FIX: Correctly get the column name from the database result\n",
     "        col_name = col[1]\n",
     "        name_md = f\"`{col_name}`\"\n",
     "\n",
@@ -495,8 +501,7 @@
     "    try:\n",
     "        details_parts = [f\"\\n---\\n### {object_name}\\n\\n\"]\n",
     "\n",
-    "        # --- FIX: This is the key change. ---\n",
-    "        # We safely get the description. If the table or the description key\n",
+    "        # Get the description. If the table or the description key\n",
     "        # doesn't exist, `table_desc` will be `None`, which is safe to check.\n",
     "        table_desc = schema_docs.get(object_name, {}).get('description')\n",
     "        if table_desc:\n",
@@ -529,12 +534,15 @@
     "            f\"_Could not generate documentation for this object. It may be temporary or invalid._\\n\\n\",\n",
     "            f\"**Error:** `{e}`\\n\",\n",
     "        ]\n",
-    "        return \"\".join(error_report)"
+    "        return \"\".join(error_report)\n",
+    "\n",
+    "\n",
+    "print(\"✅ Modular helper functions are defined.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "id": "487eb894",
    "metadata": {},
    "outputs": [
@@ -573,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "id": "0e3115be",
    "metadata": {},
    "outputs": [
@@ -600,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "id": "9b34ca99",
    "metadata": {},
    "outputs": [],
@@ -626,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 74,
    "id": "d12863cc",
    "metadata": {},
    "outputs": [
@@ -700,6 +708,97 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "1ff87f02",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking for schema drift (new tables or new columns)...\n",
+      "✨ Schema check complete.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 13: Generate or Update Schema YAML files\n",
+    "\n",
+    "if not os.path.isdir(schema_yaml_path):\n",
+    "    print(f\"⚠️ Creating schema directory at: {schema_yaml_path}\")\n",
+    "    os.makedirs(schema_yaml_path)\n",
+    "\n",
+    "if table_names:\n",
+    "    print(\"Checking for schema drift (new tables or new columns)...\")\n",
+    "    conn = sqlite3.connect(db_path)\n",
+    "    cursor = conn.cursor()\n",
+    "\n",
+    "    # Iterate through all tables found in the database\n",
+    "    for table_name in sorted(table_names):\n",
+    "        yaml_filename = f\"{table_name}.yml\"\n",
+    "        yaml_filepath = os.path.join(schema_yaml_path, yaml_filename)\n",
+    "\n",
+    "        # Get the current list of columns for the table from the database\n",
+    "        cursor.execute(f\"PRAGMA table_info('{table_name}');\")\n",
+    "        db_columns_info = cursor.fetchall()\n",
+    "        db_column_names = {col[1] for col in db_columns_info}\n",
+    "\n",
+    "        # --- CASE 1: The YAML file does NOT exist. Create it from scratch. ---\n",
+    "        if not os.path.exists(yaml_filepath):\n",
+    "            print(\n",
+    "                f\"  -> New table found! Creating placeholder file: {yaml_filename}\")\n",
+    "            yaml_structure = {\n",
+    "                'table_name': table_name,\n",
+    "                'description': 'ADD A DESCRIPTION FOR THIS TABLE',\n",
+    "                'owner': 'NEEDS OWNER',\n",
+    "                'tags': [],\n",
+    "                'columns': [\n",
+    "                    {'name': col[1], 'description': 'ADD A DESCRIPTION FOR THIS COLUMN', 'tests': [\n",
+    "                    ]}\n",
+    "                    # UPDATED: Sort columns alphabetically when creating a new file\n",
+    "                    for col in sorted(db_columns_info, key=lambda c: c[1])\n",
+    "                ]\n",
+    "            }\n",
+    "            with open(yaml_filepath, 'w', encoding='utf-8') as f:\n",
+    "                yaml.dump(yaml_structure, f, sort_keys=False,\n",
+    "                          default_flow_style=False, indent=2)\n",
+    "\n",
+    "        # --- CASE 2: The YAML file EXISTS. Check for new columns and update it. ---\n",
+    "        else:\n",
+    "            with open(yaml_filepath, 'r', encoding='utf-8') as f:\n",
+    "                doc = yaml.safe_load(f) or {}\n",
+    "\n",
+    "            if 'columns' not in doc:\n",
+    "                doc['columns'] = []\n",
+    "\n",
+    "            yaml_column_names = {col['name'] for col in doc.get(\n",
+    "                'columns', []) if isinstance(col, dict) and 'name' in col}\n",
+    "\n",
+    "            new_columns = db_column_names - yaml_column_names\n",
+    "\n",
+    "            if new_columns:\n",
+    "                print(\n",
+    "                    f\"  -> Updating {yaml_filename} with {len(new_columns)} new column(s).\")\n",
+    "                for col_name in sorted(list(new_columns)):\n",
+    "                    doc['columns'].append({\n",
+    "                        'name': col_name,\n",
+    "                        'description': 'ADD A DESCRIPTION FOR THIS NEW COLUMN',\n",
+    "                        'tests': []\n",
+    "                    })\n",
+    "\n",
+    "                # UPDATED: Sort the entire list of columns alphabetically by name\n",
+    "                doc['columns'].sort(key=lambda c: c.get('name', ''))\n",
+    "\n",
+    "                with open(yaml_filepath, 'w', encoding='utf-8') as f:\n",
+    "                    yaml.dump(doc, f, sort_keys=False,\n",
+    "                              default_flow_style=False, indent=2)\n",
+    "\n",
+    "    conn.close()\n",
+    "    print(\"✨ Schema check complete.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ae3b64ea",
    "metadata": {},
@@ -710,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 76,
    "id": "a96f0d30",
    "metadata": {},
    "outputs": [
@@ -723,7 +822,7 @@
     }
    ],
    "source": [
-    "# Cell 13: Generate Folder Tree\n",
+    "# Cell 14: Generate Folder Tree\n",
     "sqlpage_tree_string = \"\"\n",
     "\n",
     "\n",
@@ -759,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "id": "d9b6f394",
    "metadata": {},
    "outputs": [
@@ -777,7 +876,7 @@
     }
    ],
    "source": [
-    "## Cell 14: Assemble and Save Folder Tree Report\n",
+    "## Cell 15: Assemble and Save Folder Tree Report\n",
     "# This final cell assembles the folder tree report with frontmatter and saves it.\n",
     "\n",
     "if sqlpage_tree_string:\n",
@@ -837,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 81,
    "id": "496d7311",
    "metadata": {},
    "outputs": [
@@ -850,7 +949,7 @@
     }
    ],
    "source": [
-    "## Cell 15: Parse Comments from SQL Files\n",
+    "## Cell 16: Parse Comments from SQL Files\n",
     "\n",
     "sql_docs_data = []\n",
     "\n",
@@ -904,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 79,
    "id": "545028d9",
    "metadata": {},
    "outputs": [
@@ -917,7 +1016,7 @@
     }
    ],
    "source": [
-    "## Cell 16: Generate SQL Documentation Body\n",
+    "## Cell 17: Generate SQL Documentation Body\n",
     "# This cell takes the parsed data from the previous cell and formats it into a readable markdown document body.\n",
     "\n",
     "sql_docs_body = \"\"\n",
@@ -978,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 80,
    "id": "04cec92f",
    "metadata": {},
    "outputs": [
@@ -996,7 +1095,7 @@
     }
    ],
    "source": [
-    "## Cell 17: Assemble and Save SQL Documentation Report\n",
+    "## Cell 18: Assemble and Save SQL Documentation Report\n",
     "# This final cell assembles the full document with frontmatter and saves your new SQL Documentation report.\n",
     "\n",
     "if sql_docs_body:\n",
